--- a/app/src/main/res/layout/item_landing.xml
+++ b/app/src/main/res/layout/item_landing.xml
@@ -15,8 +15,8 @@
         <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/mascotas_06"
+                android:scaleType="centerInside"
+                android:src="@drawable/mascotas_07"
                 />
 
         <LinearLayout
