--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,21 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".DetailActivity"
-        android:orientation="vertical"
-        android:gravity="center"
-        >
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-            android:id="@+id/txtDetails"
+    <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBarDetail"
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
+            android:fitsSystemWindows="true"
+            >
+
+        <android.support.design.widget.CoordinatorLayout
+                android:id="@+id/coordinatorDetail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:contentScrim="?attr/colorAccent"
+                app:layout_scrollFlags="exitUntilCollapsed|scroll"
+                >
+
+            <ImageView
+                    android:id="@+id/imageHeaderDetail"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:transitionName="transitionHeader"
+                    app:layout_collapseMode="parallax"
+                    tools:src="@drawable/shop_01"
+                    />
+
+            <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbarDetail"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    />
+
+
+        </android.support.design.widget.CoordinatorLayout>
+
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            />
+            app:behavior_overlapTop="30dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            >
+
+        <include layout="@layout/content_descr"></include>
+
+    </android.support.v4.widget.NestedScrollView>
 
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
