--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
             android:id="@+id/recyclerViewLanding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:behavior_overlapTop="30dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             />
 
