--- a/app/src/main/res/layout/content_descr.xml
+++ b/app/src/main/res/layout/content_descr.xml
@@ -11,7 +11,7 @@
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:padding="10dp"
             android:orientation="vertical">
 
@@ -43,15 +43,22 @@
                 android:layout_gravity="end"
                 tools:text="$$$"
                 />
+
         <TextView
                 android:id="@+id/txtDetailLongDesc"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="462dp"
                 android:textSize="18sp"
                 android:layout_marginTop="10dp"
                 tools:text="@string/loremipsum"
                 />
 
+        <Button
+                android:text="COMPRAR"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnDetailBuy"
+                android:background="#E91E63"/>
 
 
     </LinearLayout>
